--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,3 @@
-# GEMINI_API_KEY: Required for Gemini AI API calls.
-# AI Studio automatically injects this at runtime from user secrets.
-# Users configure this via the Secrets panel in the AI Studio UI.
-GEMINI_API_KEY="MY_GEMINI_API_KEY"
-
-# APP_URL: The URL where this applet is hosted.
-# AI Studio automatically injects this at runtime with the Cloud Run service URL.
-# Used for self-referential links, OAuth callbacks, and API endpoints.
-APP_URL="MY_APP_URL"
+BOT_TOKEN=8340829703:AAGI47Ma3B5DJjV1N0CiB2ELaavBp8g9OZU
+TELEGRAM_CHAT_ID=1372666245
+GEMINI_API_KEY=
