--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "better-sqlite3": "^12.4.1",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
+    "dexie": "^4.3.0",
+    "dexie-react-hooks": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "lucide-react": "^0.546.0",
