--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@vitejs/plugin-react": "^5.0.4",
     "better-sqlite3": "^12.4.1",
     "cheerio": "^1.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.6",
-    "dexie": "^4.3.0",
-    "dexie-react-hooks": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
+    "idb": "^8.0.3",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "node-telegram-bot-api": "^0.67.0",
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.1",
+    "tailwind-merge": "^3.5.0",
     "vite": "^6.2.0"
   },
   "devDependencies": {
